--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,6 +42,7 @@ body {
   border-radius: 30px;
   font-size: 18px;
   flex: 1;
+  min-width: 200px;
   box-sizing: border-box;
 }
 .search button {
@@ -128,6 +129,8 @@ body {
     border-radius: 30px;
   }
   .search input {
-    width: 200px;
+    width: 100%;
+    font-size: 16px;
+    height: 50px;
   }
 }
