--- a/CSS/index.css
+++ b/CSS/index.css
@@ -42,7 +42,7 @@ body {
   border-radius: 30px;
   font-size: 18px;
   flex: 1;
-  min-width: 200px;
+  min-width: 100px;
   box-sizing: border-box;
 }
 .search button {
@@ -124,12 +124,12 @@ body {
     margin-left: 20px;
   }
   .search button {
-    /* width: 100px;
-    height: 50px; */
+    width: 100px;
+    height: 50px;
     border-radius: 30px;
   }
   .search input {
-    width: 100%;
+    
     font-size: 16px;
     height: 50px;
   }
